2010-03-05  Fumitoshi Ukai  <ukai@chromium.org>

        Reviewed by Alexey Proskuryakov.

        WebSocket onmessageerror event handler
        https://bugs.webkit.org/show_bug.cgi?id=35570

        * websocket/tests/error-detect-expected.txt: Added.
        * websocket/tests/error-detect.html: Added.
        * websocket/tests/script-tests/error-detect.js: Added.
        * websocket/tests/unknown-frame-type_wsh.py: Added.

2010-03-04  Fumitoshi Ukai  <ukai@chromium.org>

        Reviewed by Alexey Proskuryakov.

        WebSocket crash bug when reloading the page while the WebSocket is busy
        https://bugs.webkit.org/show_bug.cgi?id=35732

        * websocket/tests/reload-crash-expected.txt: Added.
        * websocket/tests/reload-crash.html: Added.
        * websocket/tests/resoures/reload-crash-iframe.html: Added.

2010-03-04  MORITA Hajime <morrita@google.com>

        Reviewed by Alexey Proskuryakov.

        Refactoring: XMLHTTPRequest.open() should have all overloaded implementations
        https://bugs.webkit.org/show_bug.cgi?id=35630

        * http/tests/xmlhttprequest/open-async-overload-expected.txt: Added.
        * http/tests/xmlhttprequest/open-async-overload.html: Added.

2010-03-04  Tony Chang  <tony@chromium.org>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=18819
        Pressing option+page{down,up} should move the cursor and scroll in
        content editable areas.  On other platforms, pressing page{down,up}
        should move the cursor and scroll in content editable areas.

        * editing/input/option-page-up-down-expected.txt: Added.
        * editing/input/option-page-up-down.html: Added.

2010-03-03  Oliver Hunt  <oliver@apple.com>

        Reviewed by Gavin Barraclough.

        Allow static property getters to interact with JSCs caching
        https://bugs.webkit.org/show_bug.cgi?id=35716

        Add tests to ensure nothing horrifying happens to static property