@@ -1,0 +1,12 @@
+Make sure WebSocket transfer null character
+
+On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE".
+
+WebSocket open
+msg should not be split by frame char \xff\0
+PASS msg is expectedMessage
+WebSocket closed
+PASS successfullyParsed is true
+
+TEST COMPLETE
+
