@@ -2,6 +2,17 @@
 
         Reviewed by Alexey Proskuryakov.
 
+        WebSocket test to transfer null character
+        https://bugs.webkit.org/show_bug.cgi?id=35715
+
+        * websocket/tests/null-character-expected.txt: Added.
+        * websocket/tests/null-character.html: Added.
+        * websocket/tests/script-tests/null-character.js: Added.
+
+2010-03-05  Fumitoshi Ukai  <ukai@chromium.org>
+
+        Reviewed by Alexey Proskuryakov.
+
         WebSocket onmessageerror event handler
         https://bugs.webkit.org/show_bug.cgi?id=35570
 
